# binance-data-checker

./: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
api/: openapi.yaml
configs/: spot-1d.yaml  spot-all-usdt-1d.yaml
docs/dev/: all-tradable-klines-design.md  api-design.md
docs/user/: all-tradable-klines.md  chart-ui.md  downloader.md  tradable-symbols.md
examples/: check.py  check_tradable_symbols.py  download.py  download_tradable_klines.py  pipeline.py  run_download.py
frontend/src/: main.jsx  styles.css
src/: binance_symbols.py  checker.py  column_namer.py  data_inserter.py  downloader.py  filelist_generator.py  formatter.py  klines_orchestrator.py  paths.py  pipeline.py  symbol_resolver.py  timestamper.py  url_builder.py
src/api/: app.py
tests/: test_all_tradable_klines.py  test_binance_symbols.py  test_concurrent_download_example.py
